--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* Default CSS */
 * {
   margin: 0;
   padding: 0;
@@ -11,12 +10,12 @@ html {
 }
 
 body {
-  font-family: "Roboto", sans-serif !important;
   font-weight: 400;
   overflow-x: hidden;
   position: relative;
   background-color: #121212 !important;
-  color: white !important;
+  color: #fff !important;
+  font-family: "Roboto", sans-serif !important;
 }
 
 h1,
@@ -30,6 +29,44 @@ h6 {
   line-height: normal;
 }
 
+p,
+a,
+li,
+button,
+ul {
+  margin: 0;
+  padding: 0;
+  line-height: normal;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
+button {
+  border: 0;
+  background-color: transparent;
+}
+
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none;
+}
+
+@media (min-width: 1700px) {
+  main .container {
+    max-width: 100%;
+    padding: 0 150px;
+  }
+}
+
 p.success {
   color: green;
 }
@@ -37,45 +74,42 @@ p.success {
 p.danger {
   color: red;
 }
-
+/************ Navbar Css ************/
 nav.navbar {
   padding: 18px 0;
   position: fixed;
   width: 100%;
   top: 0;
   z-index: 9999;
-  transition: 0.32 ease-in-out;
+  transition: 0.32s ease-in-out;
 }
-
 nav.navbar.scrolled {
   padding: 0px 0;
   background-color: #121212;
 }
-
+nav.navbar a.navbar-brand {
+  width: 9%;
+}
 nav.navbar .navbar-nav .nav-link.navbar-link {
   font-weight: 400;
-  color: white !important;
+  color: #fff !important;
   letter-spacing: 0.8px;
   padding: 0 25px;
   font-size: 18px;
   opacity: 0.75;
 }
-
 nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
 nav.navbar .navbar-nav a.nav-link.navbar-link.active {
   opacity: 1;
 }
-
 span.navbar-text {
   display: flex;
   align-items: center;
 }
-
-.social-icons {
+.social-icon {
   display: inline-block;
   margin-left: 14px;
 }
-
 .social-icon a {
   width: 42px;
   height: 42px;
@@ -88,7 +122,6 @@ span.navbar-text {
   line-height: 1;
   border: 1px solid rgba(255, 255, 255, 0.5);
 }
-
 .social-icon a::before {
   content: "";
   width: 42px;
@@ -99,27 +132,23 @@ span.navbar-text {
   transform: scale(0);
   transition: 0.3s ease-in-out;
 }
-
 .social-icon a:hover::before {
   transform: scale(1);
 }
-
-.social-icon a svg {
-  width: 50%;
+.social-icon a img {
+  width: 40%;
   z-index: 1;
-  transition: 0.3 ease-in-out;
+  transition: 0.3s ease-in-out;
   color: white;
 }
-
-.social-icon a:hover svg {
+.social-icon a:hover img {
   filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%)
-    hue-rotate(346deg) brightness(0);
+    hue-rotate(346deg) brightness(95%) contrast(86%);
 }
-
 .navbar-text button {
   font-weight: 700;
-  color: white;
-  border: 1px solid white;
+  color: #fff;
+  border: 1px solid #fff;
   padding: 18px 34px;
   font-size: 18px;
   margin-left: 18px;
@@ -127,23 +156,20 @@ span.navbar-text {
   background-color: transparent;
   transition: 0.3s ease-in-out;
 }
-
 .navbar-text button span {
   z-index: 1;
 }
-
 .navbar-text button::before {
   content: "";
   width: 0%;
   height: 100%;
   position: absolute;
-  background-color: white;
+  background-color: #fff;
   left: 0;
   top: 0;
   z-index: -1;
   transition: 0.3s ease-in-out;
 }
-
 .navbar-text button:hover {
   color: #121212;
 }
@@ -197,43 +223,4 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
 }
 nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   border-color: transparent;
-}
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
