--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,8 @@ nav.navbar a.navbar-brand {
 
 #photo {
   border-radius: 50%;
+  width: 140px;
+  height: 140px;
 }
 
 nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
