--- a/src/App.css
+++ b/src/App.css
@@ -103,14 +103,17 @@ nav.navbar a.navbar-brand {
 
 #photo {
   border-radius: 50%;
-  width: 140px;
-  height: 140px;
 }
 
 nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
 nav.navbar .navbar-nav a.nav-link.navbar-link.active {
   opacity: 1;
 }
+
+.ms-auto {
+  margin-right: 240px;
+}
+
 span.navbar-text {
   display: flex;
   align-items: center;
