--- a/src/App.css
+++ b/src/App.css
@@ -332,45 +332,62 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-size: 18px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
-  margin: 14px 0 75px 0;
+  margin: 14px 0 55px 0;
+  font-style: italic;
 }
+
 .skill-slider {
   width: 80%;
   margin: 0 auto;
   position: relative;
 }
 
+.title-list-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .skill-slider .item {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
-.skill-slider .item .tagline {
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.skill-slider .item ul {
-  padding: 0;
-  text-align: left;
+.skill-slider ul {
   list-style: none;
   text-align: center;
+  padding: 0;
+  margin: 0 auto;
 }
 
-.skill-slider .item .tagline,
-.skill-slider .item ul {
-  display: block;
-}
-
-.skill-slider .item li {
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5em;
+.item h5 {
+  font-weight: 700;
   letter-spacing: 0.8px;
+  line-height: 1.4;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 10px;
+  padding-right: 10px;
+  background: linear-gradient(
+    90.21deg,
+    rgba(170, 54, 124, 0.5) -5.91%,
+    rgba(74, 47, 189, 0.5) 111.58%
+  );
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 68px;
+  margin: 0 auto 16px;
 }
-.background-image-left {
-  top: 28%;
-  position: absolute;
-  bottom: 0;
-  width: 40%;
-  z-index: -4;
+
+.skill-slider li {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.6;
 }
