--- a/src/App.css
+++ b/src/App.css
@@ -387,7 +387,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 .skill-slider li {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 500;
-  line-height: 1.6;
+  line-height: 1.4;
+  margin-top: 8px;
 }
