--- a/src/App.css
+++ b/src/App.css
@@ -247,18 +247,22 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   background-repeat: no-repeat;
 }
 .tagline {
+  display: flex;
+  justify-content: center; /* Centrage horizontal */
+  align-items: center; /* Centrage vertical */
   font-weight: 700;
   letter-spacing: 0.8px;
-  padding: 8px 10px;
   background: linear-gradient(
     90.21deg,
     rgba(170, 54, 124, 0.5) -5.91%,
     rgba(74, 47, 189, 0.5) 111.58%
   );
   border: 1px solid rgba(255, 255, 255, 0.5);
-  font-size: 20px;
+  font-size: 24px;
   margin-bottom: 16px;
-  display: inline-block;
+  width: 200px;
+  height: 68px;
+  padding: 8px 10px; /* Ajustez si nécessaire */
 }
 .banner h1 {
   font-size: 65px;
@@ -332,7 +336,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-size: 18px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
-  margin: 14px 0 55px 0;
+  margin: 14px 0 70px 0;
   font-style: italic;
 }
 
