--- a/src/App.css
+++ b/src/App.css
@@ -436,6 +436,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   object-fit: contain;
 }
 
+.proj-imgbx a {
+  color: inherit;
+}
+
 .proj-imgbx img {
   width: 100%;
   height: 100%;
